# rag-admin

./: .gitignore  ARCHITECTURE_CHANGES.md  CLARIFICATIONS.md  DEPLOYMENT-INDEX.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCKER-IMAGES-EXPLAINED.md  DOCKER.md  DOCS_SUMMARY.md  GITHUB-DEPLOY-QUICKSTART.md  GITHUB-DEPLOY.md  MIGRATION_SUMMARY.md  OBSERVABILITY-GUIDE.md  README.md  SECRETS_ROTATION.md  backup.sh  claude.md  diagnose_instrumentation.py  docker-compose.local.yml  docker-compose.observability.deprecated.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  test-telemetry.sh  test_auth.sh  test_otlp_export.py  verify-setup.sh  workflow-guide.md
.claude/: hooks.json
.claude/hooks/: session-summary.sh
.github/workflows/: .gitkeep  backup.yml  ci-backend.yml  ci-frontend.yml  deploy-signoz.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  diagnose_instrumentation.py  entrypoint.sh  pyproject.toml  verify_observability.py
backend/alembic/: env.py
backend/alembic/versions/: 6386c45a01f0_initial_auth_schema.py  6beb61a969e0_add_is_default_to_projects.py  83260626cf13_add_documents_table.py  958ec663ffaa_add_projects_table.py
backend/app/: config.py  database.py  exceptions.py  main.py
backend/app/adapters/: __init__.py
backend/app/adapters/llamaindex/: __init__.py  extractor.py
backend/app/adapters/storage/: __init__.py  local.py
backend/app/dependencies/: __init__.py  auth.py  documents.py
backend/app/middleware/: __init__.py  tracing.py
backend/app/models/: __init__.py  document.py  login_attempt.py  project.py  refresh_token.py  user.py
backend/app/observability/: __init__.py  log_config.py  metrics.py  middleware.py  tracing.py
backend/app/ports/: __init__.py  document_processing.py  storage.py
backend/app/repositories/: __init__.py  document_repository.py  login_attempt_repository.py  project_repository.py  refresh_token_repository.py  user_repository.py
backend/app/routers/: __init__.py  auth.py  documents.py  oauth.py  otel_proxy.py  projects.py  users.py
backend/app/schemas/: __init__.py  auth.py  document.py  project.py  user.py
backend/app/services/: __init__.py  auth_service.py  document_service.py  exceptions.py  oauth_service.py  project_service.py
backend/app/utils/: file_validation.py  jwt.py  oauth.py  oauth_state.py  password.py  request.py
backend/tests/: conftest.py
backend/tests/repositories/: test_login_attempt_repository.py  test_project_repository.py  test_refresh_token_repository.py  test_user_repository.py
backend/tests/routers/: test_auth.py  test_oauth.py  test_projects.py
backend/tests/services/: test_auth_service.py  test_oauth_service.py  test_project_service.py
backend/tests/utils/: test_jwt.py  test_oauth_state.py  test_password.py
caddy/: Caddyfile  README.md
docs/: session-log.md
docs/architecture/: README.md
docs/deployment/: README.md  checklist.md  ci-cd-quickstart.md  docker.md
docs/observability/: FINAL_SOLUTION.md  IMPLEMENTATION_NOTES.md  README.md  TESTING.md  deep-dive.md  manual-spans.md
docs/planning/: 01-prd.md  02-tdd.md  04-database-schema.md  CLAUDE-SESSION-GUIDE.md  default-project-refactor-plan.md  documents-feature-implementation-plan.md  documents-feature-spec.md  observability-prd.md  observability-refactor.md  otel-frontend-proxy-IMPLEMENTATION.md  otel-frontend-update-FIXED.md  otel-frontend-update.md  (+1 more)
frontend/: .dockerignore  .eslintrc.cjs  DOCKER-REFERENCE.md  Dockerfile.nginx-reference  index.html  nginx.conf.reference  package-lock.json  package.json  tailwind.config.js
observability/: PHASE1-SUMMARY.md  VERIFICATION.md  otel-collector-config.yaml
scripts/: dev.sh  setup.sh  test-tracing.sh  verify-observability.sh
tasks/: auth-api.md  auth-ui.md  database-models.md  nav-task.md  oauth-api.md  oauth-ui.md  project-scaffold.md  task-template.md  update-auth-ui.md
(+51 files in other folders)
